--- a/client/src/components/MediaPlayer.scss
+++ b/client/src/components/MediaPlayer.scss
@@ -1,11 +1,13 @@
 .media-player {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   
   &__container {
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,9 +15,10 @@
   
   &__video {
     max-width: 100%;
-    max-height: 50vh;
+    max-height: 100%;
     width: auto;
     height: auto;
+    object-fit: contain;
   }
   
   &__audio {
